--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light ">
             <div class="container-fluid ">
-                <img class="logo" src="http://146.185.155.45/images/misc/logo.png" alt="logo">             
+                <img class="logo" src="http://146.185.155.45/images/misc/logo.png" alt="logo"> 
+                <img class="logo_md"src="https://d92mrp7hetgfk.cloudfront.net/images/sites/misc/Boolean/original.png?1623187562" alt="">            
                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation"
                  >
                 <span class="navbar-toggler-icon"></span>
